--- a/gramener_case_study.ipynb
+++ b/gramener_case_study.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Imgur](https://i.imgur.com/NfhSiKi.png)"
+    "# Gramener Case Study\n"
    ]
   },
   {
